@@ -49,16 +49,16 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> input = List.of("k1/sk1", "k2/sk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -76,7 +76,7 @@ public class DepartmentsTest {
             "K2/SK1/SSK2",
             "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
             "K1",
             "K1/SK1",
             "K1/SK1/SSK1",
@@ -101,7 +101,7 @@ public class DepartmentsTest {
             "K2/SK1/SSK2",
             "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
             "K1/SK1/SSK1",
             "K1/SK1/SSK2",
             "K1/SK2",
@@ -126,7 +126,7 @@ public class DepartmentsTest {
             "K2/SK1/SSK2",
             "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
             "K2",
             "K2/SK1",
             "K2/SK1/SSK1",
@@ -152,7 +152,7 @@ public class DepartmentsTest {
             "K2/SK1/SSK2",
             "K2/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
             "K2/SK1",
             "K2/SK1/SSK1",
             "K2/SK1/SSK2",
